# Automation-Platform

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  current-focus.md  roadmap.md
docs/adr/: ADR-001-modular-monolith.md  ADR-002-queue-driven-execution.md  ADR-003-interface-based-extension-points.md  ADR-004-runtime-processes-and-application-services.md  ADR-005-Immutable-Workflow-Definitions.md  ADR-005-Separate-Definitions-from-Execution-State.md  ADR-006-dependency-based-workflow-scheduling.md  ADR-006-domain-model-independent-of-persistence.md  ADR-008-unit-of-work-for-transaction-management.md  ADR-009-plugin-communication-through-domain-execution-models.md  README.md
docs/architecture/: README.md  application.md  data-model.md  database-schema.md  domain.md  execution-model.md  overview.md  persistence.md  plugins.md  project-structure.md  queue.md
src/automation_platform/domain/: __init__.py
src/automation_platform/domain/common/: __init__.py  enums.py
src/automation_platform/domain/execution_runtime/: __init__.py  task_context.py  task_output.py  task_result.py
src/automation_platform/domain/workflow_definitions/: __init__.py  task_definition.py  trigger_definition.py  workflow_definition.py
src/automation_platform/domain/workflow_executions/: __init__.py  task_execution.py  workflow_execution.py
src/automation_platform/plugins/: _discovery.py  _registry.py
tests/fixtures/example_plugin_package/: interface.py
tests/plugins/: test_discovery.py  test_registry.py
(+7 files in other folders)
