[project]
name = "automation-platform"
version = "0.1.0"
description = "A plugin-based workflow automation platform."
readme = "README.md"
requires-python = ">=3.14,<3.15"

authors = [
    { name = "Devin MacKay" }
]


[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
target-version = "py314"
line-length = 100


[tool.ruff.lint]
select = ["E", "F", "I"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
